[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webhook-bin"
version = "0.1.0"
description = "Local-first webhook bin with UI dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
webhook-bin = "webhook_bin.main:main"

[tool.setuptools]
packages = ["webhook_bin"]

[tool.setuptools.package-data]
webhook_bin = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
